--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,5 +36,5 @@ html
               a#kakao.btn(href='/auth/kakao') 카카오톡
         footer
           | Made by&nbsp;
-          a(href='https://www.zerocho.com' target='_blank') ZeroCho
+          a(href='https://blog.naver.com/whdgml1996' target='_blank') papercraft
       block content
